<resources>
    <string name="app_name">NUMAD21Fa_YanWang</string>
    <string name="Main_About_Btn">About</string>
    <string name="Main_Hello_TextView">Hello World!</string>
    <string name="Main_Clicky_Btn">Clicky Clicky</string>
    <string name="Main_Link_Collector_Btn">Link Collector</string>
    <string name="Main_Location_Btn">Location</string>
    <string name="Main_Coin_Btn">Cryptocurrency Information</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="Location_TextView">latitude: \nlongitude:</string>
    <string name="Second_A_Btn">A</string>
    <string name="Second_B_Btn">B</string>
    <string name="Second_C_Btn">C</string>
    <string name="Second_D_Btn">D</string>
    <string name="Second_E_Btn">E</string>
    <string name="Second_F_Btn">F</string>
    <string name="CryptoCurrency_Enter_Hint">Please Enter the Symbol of the Cryptocurrency</string>
    <string name="CryptoCurrency_Symbol_Hint">e.g: BTC, ETH, BNB, DOGE</string>
</resources>